fixes for GitHub Pages

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,4 +7,4 @@
 - name: Support
   link: https://pinetreesoftware-help.freshdesk.com/support/home
 - name: Privacy
-  link: /pages/Privacy.html
+  link: /pages/privacy.html
